[package]
name = "admin"
version = "0.1.0"
authors = ["Nikita Puzankov <humb1t@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
carapax = "0.5" 
discord = { git = "https://github.com/vityafx/discord-rs", branch = "master", default-features = false }
dotenv = "0.15"
futures = "0.3"
rvk = { git = "https://github.com/humb1t/rvk", branch = "master" }
serde = "1.0"
serde_json = "1.0"
tgbot = "0.7"
tokio = { version = "0.2", features = ["full"] }
